--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,12 @@
 body {
     text-align: center;
 }
+
+.header{
+    margin-right: auto;
+    margin-left: auto;
+}
+
+#score{
+    font-size:150%;
+}
